Got token / email login screen switch working

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -6,6 +6,7 @@
         <h1>Okarito7</h1>
         <p>Please log in to your FogBugz account to continue.</p>
         <p>No account? <a href="#" onclick="window.open('http://www.fogcreek.com/fogbugz/', '_system');">Get one here.</a></p>
+        <p>Two-factor authentication users can <a ui-sref="login">login with a token here.</a></p>
       </div>
       <div class="list">
         <label class="item item-input">
