--- a/www/templates/token-login.html
+++ b/www/templates/token-login.html
@@ -6,7 +6,8 @@
         <h1>Okarito7</h1>
         <p>Please enter your FogBugz API token to continue.</p>
         <p>Need help getting an API key? <a href="#" onclick="window.open('http://help.fogcreek.com/8447/how-to-get-a-fogbugz-xml-api-token', '_system');">Look here.</a></p>
-        <p>FogBugz For Your Server users: <a href="#" onclick="showEmailLogin()">login with email address and password here.</a></p>
+        <p>FogBugz For Your Server users can
+        <a ui-sref="email-login">login using email address.</a></p>
       </div>
       <div class="list">
         <label class="item item-input">
